# metapsp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  make.inc  psml_build.txt
src/: CMakeLists.txt  Makefile  Makefile_ref  check_data.f90  derivs.f90  eresid.f90  exc_libxc_stub.f90  excr2scan01_m.f90  fcrossover.f90  fphsft_m.f90  fpovlp.f90  gauss_smooth.f90  globalmath_loc.F90  gnu_script_m.f90  linout.f90  linout_m.f90  lschfb.f90  lschfb_m.f90  lschfs_m.f90  lschkb_m.f90  lschps_m.f90  lschpsbar_m.f90  lschvkbb_m.f90  lschvkbbe_m.f90  lschvkbs_m.f90  m_getopts.f90  m_psmlout_m.f90  oncvpsp_m.f90  oncvpsp_mx.f90  polysmooth.f90  pspot_m.f90  r2scanmod.F90  rtloc_m.f90  run_diag_m.f90  run_ghosts_m.f90  run_optimize_m.f90  run_phsft_m.f90  run_plot_m.f90  run_vkb_m.f90  sratom.f90  (+8 more)
tests/: replot.sh  runm.sh  runmsr.sh
tests/data/: .74_W_d1.dat.swp
tests/refs/: 06_C_ae_m.out  14_Si_m.out  19_K_st_m.out  20_Ca2_m.out  38_Sr_m.out  44_Ru_m.out  52_Te2_m.out  56_Ba_m.out  60_Nd_new_m.out  74_W_d1_m.out  83_Bi_d1_m.out
tests/refs_sr/: 06_C_ae_m.out  14_Si_m.out  19_K_st_m.out  20_Ca2_m.out  29_Cu_m.out  38_Sr_m.out  44_Ru_m.out  52_Te2_m.out  56_Ba_m.out  60_Nd_new_m.out  74_W_d1_m.out  83_Bi_d1_m.out
